--- a/src/app/nw3/nw3.component.scss
+++ b/src/app/nw3/nw3.component.scss
@@ -411,7 +411,7 @@ $voteIconsColor: #008d05, #f2ce00, #f50c0c, #4c00ff, #4c00ff;
 
     .GG:nth-child(#{$i}) {
         // color: nth($voteIconsColor, $i);
-        animation: fadeIn 0.2s ease-in-out backwards;
+        animation: bounce 0.5s ease-in-out backwards;
         animation-iteration-count: 1;
         animation-delay: $i * 0.15 + s;
         text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
@@ -553,7 +553,7 @@ $voteIconsColor: #008d05, #f2ce00, #f50c0c, #4c00ff, #4c00ff;
     z-index: 2;
     animation: tada 1000ms ease-in-out 1ms forwards;
     text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
-    box-shadow: inset inset 0px 0px 5px #c1c1c1;
+    box-shadow: inset inset 0px 0px 5px #c1c1c1;      
     @include BoxShadow(6);
     transform: scale(1.2);
 }
@@ -579,6 +579,7 @@ $voteIconsColor: #008d05, #f2ce00, #f50c0c, #4c00ff, #4c00ff;
     transition: all 100ms ease-in-out;
     text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
     box-shadow: inset inset 0px 0px 5px #c1c1c1;
+    animation: bounce 0.5s ease-in-out forwards;
     @include BoxShadow(6);
     // animation: heartBeat 10000ms ease-in-out 20ms infinite;
 }
@@ -763,32 +764,6 @@ $voteIconsColor: #008d05, #f2ce00, #f50c0c, #4c00ff, #4c00ff;
     width: max-content;
     text-align: center;
 }
-
-// theme
-
-// $postItHeaderColorsLength: length($postItHeaderColors2);
-// .voteIcons {
-//     @for $i from 1 through 4 {
-//         &:nth-of-type(#{$postItHeaderColorsLength}n + #{$i}) .voteIconButton {
-//             color: nth($postItHeaderColors2, $i);
-//             // color: darkblue;
-//             // animation: nth($postItanimations, $i) 0.2s;
-//             animation: fadeIn 0.2s ease-in-out backwards;
-//             animation-iteration-count: 1;
-//             animation-delay: $i * 0.15 + s;
-//         }
-
-//         &:nth-of-type(#{$postItHeaderColorsLength}n + #{$i}) .voteIconButton:hover {
-//             transform: scale(2.1);
-//             color: green;
-//             transform: rotate(2deg);
-//             position: relative;
-//             top: -2px;
-//             background: white;
-//             // animation: nth($postItanimations, $i) 1s;
-//         }
-//     }
-// }
 
 // SUMMARY SCSS
 
