--- a/src/app/restaurant/restaurant.component.html
+++ b/src/app/restaurant/restaurant.component.html
@@ -1,33 +1,35 @@
 <div class="mainContainer disable-dbl-tap-zoom">
 
-    <div class="header">
-        <img class="logo" src="./assets/img/food/lunaLogo.jpg">
-        <p>Luna Rosa</p>
-        <p style="color: grey;">table i#: {{tableNo}}</p>
+    <div class="logo-miami">
+        <!-- <img class="logo" src="./assets/img/food/payment.JPG"> -->
+        <p>MIAMI LUXURY</p><br>
+        <p style="color: rgb(255, 55, 255);">RIDES</p>
+        <!-- <p style="color: grey;">table i#: {{tableNo}}</p> -->
     </div>
 
     <div class="menu">
 
 
 
-        <div class="foodCard" *ngFor="let item of food; index as i">
-          
-            <img class="pizzaImage" style="width: 310px;" [src]="item.imgSrc">
-            <h1 class="title secondary-text">{{item.name}}</h1>
+        <div class="foodCard" *ngFor="let item of food; index as i" style="color: white;">
+
+            <img class="pizzaImage" style="width: 106%;" [src]="item.imgSrc">
+            <h1 class="title secondary-text" style="padding-top: 10px;">{{item.name}}</h1>
             <div class="title secondary-text" style="width: 290px;text-align: center;">{{item.description}}</div>
 
             <div class="column">
-                
+
                 <div class="row">
-                    <!-- <button *ngIf="item.options?.length > 0" mat-raised-button color="primary" (click)="option(i)"
-                        style="color: black;outline: none; margin: 4px; color: white;">
-                        options
-                    </button> -->
-                    <button *ngIf="item.toppings?.length > 0" mat-raised-button color="accent" (click)="toppings(i)"
-                        style="color: black;outline: none; margin: 4px; color: white; background-color:#e7362d">
-                        toppings
+                    <button *ngIf="item.options?.length > 0" mat-raised-button  (click)="option(i)"
+                        style="color: black;outline: none; margin: 4px;background-color: goldenrod;">
+                        BOOK
                     </button>
-                    <button mat-icon-button color="accent" (click)="removeToCart(i)"
+                    <div  *ngIf="item.options?.length > 0"> or </div>
+                    <button *ngIf="item.toppings?.length > 0" mat-raised-button  (click)="toppings(i)"
+                        style="color: black;outline: none; margin: 4p; background-color:#ff37ff">
+                        RENT
+                    </button>
+                   <!-- <button mat-icon-button color="accent" (click)="removeToCart(i)"
                         style="color: black;outline: none;">
                         <mat-icon>remove_circle_outline</mat-icon>
                     </button>
@@ -37,7 +39,7 @@
                     </button>
                     <button mat-icon-button color="primary" style="color: black;outline: none;font-size: 30px;">
                         {{item.orderQuantity}}
-                    </button>
+                    </button> -->
                 </div>
                 <!-- <div class="row">
                     Speacial Instructions &nbsp; &nbsp; <input [(ngModel)]="item.specialIntructions" matInput placeholder="Ex. Pizza" type="text">
@@ -49,9 +51,6 @@
         <br>
         <br>
         <br>
-
-
-        
     </div>
 
 
@@ -59,23 +58,23 @@
 
     <div class="footer">
 
-
         <button mat-mini-fab color="warn"
-            style="color: white;outline: none;position: absolute;bottom: 19px; left: 80px;">
+            style="color: white;outline: none;position: absolute;bottom: 19px; left: 80px;background-color: goldenrod;">
             <mat-icon (click)="qrcode()">qr_code</mat-icon>
         </button>
         <button mat-mini-fab color="primary" style="color: white;
-        background-color: green;
+        background-color: black;
         font-size: 6px;
         bottom: 30px;
         width: 60px;
-        height: 60px;"
-            (click)="checkout()">
+        height: 60px;" (click)="checkout()">
             <mat-icon>attach_money</mat-icon>
         </button>
-        <button mat-mini-fab color="accent"
-            style="color: white;outline: none;position: absolute;bottom: 19px; right: 80px;">
-            <mat-icon (click)="qrcode()">settings</mat-icon>
+        <button mat-mini-fab 
+            style="background-color: goldenrod; color: white;outline: none;position: absolute;bottom: 19px; right: 80px;">
+            <a style="color: white;" href="tel:3053220070">
+                <mat-icon>phone</mat-icon>
+            </a>
         </button>
 
     </div>
@@ -116,7 +115,8 @@
 
     <div *ngIf="popUpOptions" class="formFieldValidationAlert">
         <h1>Please select an option</h1>
-        <mat-radio-group class="column" [(ngModel)]="selectedOption"  *ngFor=" let item  of foodOptions.options ; index as i" >
+        <mat-radio-group class="column" [(ngModel)]="selectedOption"
+            *ngFor=" let item  of foodOptions.options ; index as i">
             <mat-radio-button [value]="item.name">
                 {{item.name}}
             </mat-radio-button>
@@ -140,49 +140,17 @@
     </div>
 
 
-    <div *ngIf="popUpCheckout" class="reviewOrderClass  disable-dbl-tap-zoom">
-        <h1>REVIEW ORDER</h1>
 
-        <div style="overflow-y: scroll;">
-            <div *ngFor="let item of order.orderItems; index as i"
-                style="display: flex;flex-direction: column;border: black solid 1px;width: 250px;border-radius: 5px;">
-                <h2>{{item.name}}</h2>
-                <!-- <div>Price &nbsp; &nbsp; </div> -->
-
-                <div>{{item.description}}</div>
-                <div>{{item.specialIntructions}}</div>
-                <div>{{item.selectedOption}}</div>
-                <div>{{item.selectedToppings}}</div>
-                <br>
-                <div class="row" style="justify-content: space-around;">
-                    <button mat-icon-button color="accent" (click)="removeToCart(i)"
-                        style="color: black;outline: none;">
-                        <mat-icon>remove_circle_outline</mat-icon>
-                    </button>
-                    <div>{{item.orderQuantity}} x ${{item.price}}</div>
-                    <button mat-icon-button color="primary" (click)="addToCart(i)" style="color: black;outline: none;">
-                        <mat-icon>add_circle_outline</mat-icon>
-                    </button>
-                </div>
-            </div>
-            <div *ngIf="order.orderItems.length === 0">Nothing Order Yet</div>
-        </div>
-        <br>
-        <br>
-        <button mat-mini-fab color="primary" style="color:white;background-color: green;font-size: 6px;"
-            (click)="checkout()">
-            <mat-icon>attach_money</mat-icon>
-        </button>
-        <br>
-    </div>
 
 
     <div *ngIf="popUpThankyou" class="reviewOrderClass  disable-dbl-tap-zoom">
-        <h2>THANK YOU FOR YOUR ORDER</h2>
+        <h2>WE ACCEPT CRYPTO PAYMENTS</h2>
+        <img class="logo" style="width: 280px;" src="./assets/img/food/payment.JPG">
+
 
         <button mat-mini-fab color="primary" style="color:white;background-color: green;font-size: 6px;"
             (click)="thankYou()">
-            <mat-icon>done</mat-icon>
+            <mat-icon>check</mat-icon>
         </button>
         <br>
     </div>
