--- a/src/app/restaurant/restaurant.component.scss
+++ b/src/app/restaurant/restaurant.component.scss
@@ -41,6 +41,7 @@
         justify-content: space-between;
         align-items: center;
         border: black solid 5px;
+        background-color: rgb(0 0 0 / 88%);
         border-radius: 10px;
         overflow: hidden;
 
@@ -50,6 +51,21 @@
         -ms-transform: translate(-50%, -53%);
         transform: translate(-50%, -53%);
         @include BoxShadow(6);
+
+        
+        .logo-miami {
+            font-size: 30px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            color: aqua;
+            font-family: Miami;
+            padding-top: 20px;
+            background-color: black;
+            width: 100%;
+            text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
+            @include BoxShadow(12);
+        }
 
         .logo {
             width: 80px;
@@ -76,7 +92,7 @@
             align-items: center;
             position: fixed;
             bottom: 0px;
-            background-color: white;
+            background-color: #9e6f00;
             z-index: 1;
             border: 1px solid #004684;
         }
@@ -191,7 +207,22 @@
         justify-content: space-between;
         height: 100vh;
         overflow: hidden;
-        // @include BoxShadow(6);
+        background-color: rgb(0 0 0 / 88%);
+        color: rgb(0, 0, 0);
+
+        .logo-miami {
+            font-size: 30px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            color: aqua;
+            font-family: Miami;
+            padding-top: 20px;
+            background-color: black;
+            width: 100%;
+            text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
+            @include BoxShadow(12);
+        }
 
         .logo {
             width: 80px;
@@ -219,9 +250,9 @@
             align-items: center;
             position: fixed;
             bottom: 0px;
-            background-color: white;
+            background-color: #9e6f00;
             z-index: 1;
-            border-top: 3px solid #004684;
+            // border-top: 3px solid #004684;
         }
 
         .boton {
@@ -283,17 +314,15 @@
             margin: 10px;
         }
 
-
-
-        .pizzaImage{
-            transition: all .2s ease-in-out;
-            animation: fadeIn 1 ease-in 0  forwards 1;
+        .pizzaImage {
+            transition: all 0.2s ease-in-out;
+            animation: fadeIn 1 ease-in 0 forwards 1;
+            @include BoxShadow(12);
         }
 
-        .pizzaImage:hover{
-            // transform: scale(1.1);
+        .pizzaImage:hover {
+            transform: scale(1.1);
         }
-
     }
     .formFieldValidationAlert {
         background-color: white;
