--- a/src/assets/fonts/hackers.scss
+++ b/src/assets/fonts/hackers.scss
@@ -78,6 +78,10 @@
     font-family: Quicksand_Light;
     src: url("Quicksand_Light.otf") format("truetype");
 }
+@font-face {
+    font-family: Miami;
+    src: url("20db.otf") format("truetype");
+}
 
 
 
