--- a/src/app/restaurant/restaurant.component.scss
+++ b/src/app/restaurant/restaurant.component.scss
@@ -118,7 +118,7 @@
         .foodCard {
             display: flex;
             flex-direction: column;
-            border: gray solid 1px;
+            border: goldenrod solid 1px;
             border-radius: 5px;
             justify-content: space-between;
             align-items: center;
@@ -276,7 +276,7 @@
         .foodCard {
             display: flex;
             flex-direction: column;
-            border: gray solid 1px;
+            border: goldenrod solid 1px;
             border-radius: 5px;
             justify-content: space-between;
             align-items: center;
