BMX project table layout in progress

--- a/src/app/bmx-creator/bmx-creator.component.scss
+++ b/src/app/bmx-creator/bmx-creator.component.scss
@@ -496,8 +496,8 @@ $voteIconsColor: #008d05, #f2ce00, #f50c0c, #4c00ff, #4c00ff;
     height: 70px;
     border: 5px solid darkblue;
     position: absolute;
-    right: 192px;
-    bottom: -35px;
+    right: 143px;
+    top: -44px;
     outline: none;
     font-size: 36px;
     line-height: 31px;
@@ -520,8 +520,8 @@ $voteIconsColor: #008d05, #f2ce00, #f50c0c, #4c00ff, #4c00ff;
     height: 70px;
     border: 5px solid white;
     position: absolute;
-    right: 192px;
-    bottom: -35px;
+    right: 143px;
+    top: -44px;
     outline: none;
     font-size: 36px;
     line-height: 30px;
