--- a/src/app/bmx-creator/bmx-creator.component.html
+++ b/src/app/bmx-creator/bmx-creator.component.html
@@ -13,10 +13,10 @@
         <!-- TABLE OF CONTENT  -->
         <div *ngIf="isTableOfContent" class="tableOfContent" style="overflow-y:scroll ; overflow-x: hidden;">
             <div>Table Of Content</div>
-            <div style="font-size: 20px;padding: 10px;"
-                *ngFor="let item of slideData; let i = index" (click)="pageNumberChange(i+1)">
-               <span> {{(item.SlideDescription.length >0)?item.SlideDescription:item.SlideType}}</span>
-               <img [src]="'http://bipresents.com/nw2/' + item.SlideBGFileName"  style="width: 100px;">
+            <div style="font-size: 20px;padding: 10px;" *ngFor="let item of slideData; let i = index"
+                (click)="pageNumberChange(i+1)">
+                <span> {{(item.SlideDescription.length >0)?item.SlideDescription:item.SlideType}}</span>
+                <img [src]="'http://bipresents.com/nw2/' + item.SlideBGFileName" style="width: 100px;">
             </div>
         </div>
 
@@ -74,32 +74,38 @@
         <!--❤️ TABS PROJECT INFO, TEMPLATES, IMAGE UPLOADER, PAGE DESIGN, INTRO, PAGE MODULES, RESPONDANTS, CONTACT ❤️-->
 
         <!-- IMAGE SLIDE  -->
-        <div *ngIf="(slideType === 'Image')" class="imagePresentar" style="display: flex; flex-direction: column; align-items: center;" 
-        [style.background]="''">
-           
-        <div class="logo-badge" style="border: solid 5px darkgrey;
-        width: 166px;
-        height: 143px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        border-radius: 15px;
-        position: absolute;
-        top: -50px;
-        background-color: white;
-        padding-bottom: 5px;box-shadow: 0 6px 10px 0 rgb(0 0 0 / 14%), 0 1px 18px 0 rgb(0 0 0 / 12%), 0 3px 5px -1px rgb(0 0 0 / 20%);">
-            <img class="logo-image" style="width: 80px;" src="./assets/img/bmxLogo.png">
-            <div class="title secondary-text" style="color: #004684; margin-top: 10px;text-align: center;">
-                <!-- {{'projectName'}} -->
-                {{'BRAND MATRIX'}}
+        <div *ngIf="(slideType === 'Image')" class="imagePresentar"
+            style="display: flex; flex-direction: column; align-items: center;" [style.background]="''">
+
+            <div class="logo-badge" style="
+        border: solid 5px darkgrey;
+    width: 126px;
+    height: 123px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 15px;
+    position: absolute;
+    top: -33px;
+    background-color: white;
+    padding-bottom: 5px;
+    box-shadow: 0 6px 10px 0 rgb(0 0 0 / 14%), 0 1px 18px 0 rgb(0 0 0 / 12%), 0 3px 5px -1px rgb(0 0 0 / 20%);">
+
+                <img class="logo-image" style="width: 80px;" src="./assets/img/bmxLogo.png">
+                <div class="title secondary-text" style="color: #004684; margin-top: 10px;text-align: center;">
+                    <!-- {{'projectName'}} -->
+                    {{'BRAND MATRIX'}}
+                </div>
             </div>
-        </div>
 
-        <div style="position: absolute;
+            <div style="position: absolute;
         top: 180px;
-        font-size: 54px;"><p>WELCOME</p></div>
+        font-size: 54px;top: 150px;color: darkgrey; font-family: Miami;">
+                <!-- <p>WELCOME</p> -->
+            </div>
 
-        <div style="    display: flex;
+            <div
+                style="    display: flex;
         flex-direction: column;
         align-items: center;
         border: solid 5px darkgrey;
@@ -108,33 +114,37 @@
         position: absolute;
         top: 248px;
         padding: 32px; box-shadow: 0 6px 10px 0 rgb(0 0 0 / 14%), 0 1px 18px 0 rgb(0 0 0 / 12%), 0 3px 5px -1px rgb(0 0 0 / 20%);">
-            Please Login
-            <form class="example-form" >
-                <mat-form-field class="example-full-width" appearance="outline">
-                  <mat-label>USER NAME</mat-label>
-                  <input matInput placeholder="Ex. Pizza" value="">
-                </mat-form-field>
-              
-                <mat-form-field class="example-full-width" appearance="outline">
-                  <mat-label>PASSWORD</mat-label>
-                  <input matInput placeholder="Ex. It makes me feel...">
-                </mat-form-field>
+               
+                <form class="example-form" style="display: flex;flex-direction: column; align-items: center;width: 300px;">
+                    <mat-form-field class="example-full-width" appearance="outline">
+                        <mat-label>USER NAME</mat-label>
+                        <input matInput placeholder="Ex. Pizza" value="">
+                    </mat-form-field>
+
+                    <mat-form-field class="example-full-width" appearance="outline">
+                        <mat-label>PASSWORD</mat-label>
+                        <input matInput placeholder="Ex. It makes me feel...">
+                    </mat-form-field>
 
 
-                <button [ngClass]="(isGoVoteOn)?'GO_LOGIN':'GO_Off__LOGIN'" mat-icon-button (click)="goVote()">
-                    BI                   
-                </button>
-    
-                
+                    <button [ngClass]="(isGoVoteOn)?'GO_LOGIN':'GO_Off__LOGIN'" mat-icon-button (click)="goVote()">
+                        BI
+                    </button>
 
-              </form>
-        </div>
+                    <button  mat-icon-button (click)="goVote()">
+                        LOGIN
+                    </button>
+
+
+
+                </form>
+            </div>
 
         </div>
         <!-- {{slideBackground}} -->
 
         <!-- SUMMARY SLIDE -->
-        <div *ngIf="(slideType === 'NameSummary')" class="summaryPresentar summary">
+        <div *ngIf="(slideType === 'Image')" class="summaryPresentar summary">
 
             <div class="summaryLabel">Summary</div>
 
@@ -162,31 +172,36 @@
             <div class="summaryMainContent">
 
                 <div *ngIf="summaryPositive" class="summaryPostives">
-                    <div  class="summaryListDisplay" style="background-color: green; color: white;">
-                        <div   (click)="clickedSummaryName(item.NameToDisplay, item.Name)" *ngFor="let item of totalNewNames2[0]">{{item.Name}}</div>
+                    <div class="summaryListDisplay" style="background-color: green; color: white;">
+                        <div (click)="clickedSummaryName(item.NameToDisplay, item.Name)"
+                            *ngFor="let item of totalNewNames2[0]">{{item.Name}}</div>
                         <!-- <div *ngFor="let item of fonts">{{item}}</div> -->
                     </div>
                 </div>
                 <div *ngIf="summaryNeutral" class="summaryPostives">
-                    <div  class="summaryListDisplay" style="background-color: orange; color: white;">
-                        <div  (click)="clickedSummaryName(item.NameToDisplay, item.Name)"  *ngFor="let item of totalNewNames2[0]">{{item.Name}}</div>
+                    <div class="summaryListDisplay" style="background-color: orange; color: white;">
+                        <div (click)="clickedSummaryName(item.NameToDisplay, item.Name)"
+                            *ngFor="let item of totalNewNames2[0]">{{item.Name}}</div>
                         <!-- <div *ngFor="let item of fonts">{{item}}</div> -->
                     </div>
                 </div>
                 <div *ngIf="summaryNegative" class="summaryNegative">
-                    <div  class="summaryListDisplay" style="background-color: red; color: white;">
-                        <div  (click)="clickedSummaryName(item.NameToDisplay, item.Name)"  *ngFor="let item of totalNewNames2[0]">{{item.Name}}</div>
+                    <div class="summaryListDisplay" style="background-color: red; color: white;">
+                        <div (click)="clickedSummaryName(item.NameToDisplay, item.Name)"
+                            *ngFor="let item of totalNewNames2[0]">{{item.Name}}</div>
                         <!-- <div *ngFor="let item of fonts">{{item}}</div> -->
                     </div>
                 </div>
                 <div *ngIf="summaryNewNames" class="summaryNew_names">
-                    <div  class="summaryListDisplay" style="background-color: purple; color: white;">
-                        <div  (click)="clickedSummaryName(item.NameToDisplay, item.Name)"  *ngFor="let item of totalNewNames2[0]">{{item.NameToDisplay}}</div>
+                    <div class="summaryListDisplay" style="background-color: purple; color: white;">
+                        <div (click)="clickedSummaryName(item.NameToDisplay, item.Name)"
+                            *ngFor="let item of totalNewNames2[0]">{{item.NameToDisplay}}</div>
                         <!-- <div *ngFor="let item of fonts">{{item}}</div> -->
                     </div>
                 </div>
             </div>
-            <div *ngIf="summaryChart" class="summaryChart" style="display: flex;flex-direction: column;     align-items: center;">
+            <div *ngIf="summaryChart" class="summaryChart"
+                style="display: flex;flex-direction: column;     align-items: center;">
 
                 <!-- <div echarts [options]="chartOption" (chartClick)="onChartClick($event)"></div> -->
                 <ngx-charts-bar-vertical [hidden]="showRankedNames" [view]="chartDimension" [customColors]="colorScheme"
@@ -311,8 +326,7 @@
                                 <mat-icon>sync</mat-icon>
                             </button>
                             <button *ngIf="!recraftChecked" [matBadge]="allVoters"
-                                class="voteIconButton voteIconButton4" (click)="recraft();"
-                                mat-icon-button>
+                                class="voteIconButton voteIconButton4" (click)="recraft();" mat-icon-button>
                                 <mat-icon>sync</mat-icon>
                             </button>
                         </div>
@@ -399,8 +413,7 @@
                             </div>
                             <div class="groupNameIetmRationale" (mouseleave)="selectNameItemIndex = ''"
                                 (click)="selectNameItemIndex = ''" *ngIf="i === selectNameItemIndex"
-                                [style.left]="myleft" [style.top]="mytop"
-                                [innerHTML]="groupRationale[i]">
+                                [style.left]="myleft" [style.top]="mytop" [innerHTML]="groupRationale[i]">
                             </div>
                         </div>
                     </div>
@@ -419,7 +432,7 @@
             <button class="G4 GG" mat-icon-button (click)="setAllNamesIcon('thumb_down_off_alt', 'purple')">
                 <mat-icon>thumb_down_off_alt</mat-icon>
             </button>
-            
+
 
             <!-- <button class="G2 GG" mat-icon-button>
                     C
@@ -470,7 +483,7 @@
 
 <div *ngIf="mainMenu" class="corner_bar_menu">
     <button mat-icon-button matTooltip="home" matTooltipPosition="left">
-        <mat-icon  (click)="selectPage('home')" class="full-icon">home</mat-icon>
+        <mat-icon (click)="selectPage('home')" class="full-icon">home</mat-icon>
     </button>
     <button (click)="openFullscreen()" matTooltip="full-screen" matTooltipPosition="left" mat-icon-button color="warn"
         aria-label="aria">
@@ -491,10 +504,12 @@
         color="red">
         <mat-icon class="full-icon">phone_iphone</mat-icon>
     </button>
-    <button *ngIf="(slideType === 'NameEvaluation')" (click)="voteUserBadges()" mat-icon-button matTooltip="names box" matTooltipPosition="left">
+    <button *ngIf="(slideType === 'NameEvaluation')" (click)="voteUserBadges()" mat-icon-button matTooltip="names box"
+        matTooltipPosition="left">
         <mat-icon class="full-icon">where_to_vote</mat-icon>
     </button>
-    <button *ngIf="(slideType === 'NameEvaluation')" (click)="displayTally()" mat-icon-button matTooltip="tally" matTooltipPosition="left">
+    <button *ngIf="(slideType === 'NameEvaluation')" (click)="displayTally()" mat-icon-button matTooltip="tally"
+        matTooltipPosition="left">
         <mat-icon class="full-icon">T</mat-icon>
     </button>
     <!-- <button *ngIf="true" matTooltip="stats" matTooltipPosition="left" mat-icon-button aria-label="aria">
