--- a/src/app/nw3/nw3.component.html
+++ b/src/app/nw3/nw3.component.html
@@ -452,10 +452,10 @@
     <button (click)="fontTheme()" *ngIf="true" mat-icon-button matTooltip="toggle theme" matTooltipPosition="left">
         <mat-icon class="full-icon">casino</mat-icon>
     </button>
-    <!-- <button (click)="isSettings = !isSettings" *ngIf="true" mat-icon-button matTooltip="settings"
+    <button (click)="isSettings = !isSettings" *ngIf="true" mat-icon-button matTooltip="settings"
         matTooltipPosition="left">
         <mat-icon class="full-icon">settings</mat-icon>
-    </button> -->
+    </button>
     <button *ngIf="true" mat-icon-button matTooltip="help" matTooltipPosition="left">
         <mat-icon class="full-icon">help</mat-icon>
     </button>
