login screen deprecated by alexa cause automatic login do not need loging glowing screen

--- a/src/assets/fonts/hackers.scss
+++ b/src/assets/fonts/hackers.scss
@@ -82,6 +82,10 @@
     font-family: Miami;
     src: url("20db.otf") format("truetype");
 }
+@font-face {
+    font-family: babyScript;
+    src: url("Baby sweet Script.otf") format("truetype");
+}
 
 
 
