--- a/src/app/bmx-creator/bmx-creator.component.html
+++ b/src/app/bmx-creator/bmx-creator.component.html
@@ -58,11 +58,11 @@
 
 
         <!-- LEFT & RIGHT ICONS -->
-        <button (click)="moveRight()" class="menu-left-icon" mat-icon-button>
+        <button *ngIf="(slideType !== 'Image')" (click)="moveRight()" class="menu-left-icon" mat-icon-button>
             <mat-icon>keyboard_arrow_right</mat-icon>
         </button>
 
-        <button (click)="moveLeft1()" class="menu-right-icon" mat-icon-button>
+        <button *ngIf="(slideType !== 'Image')" (click)="moveLeft1()" class="menu-right-icon" mat-icon-button>
             <mat-icon>keyboard_arrow_left</mat-icon>
         </button>
 
@@ -72,65 +72,72 @@
 
         <!-- IMAGE SLIDE  -->
         <div *ngIf="(slideType === 'Image')" class="imagePresentar"
-            style="display: flex; flex-direction: column; align-items: center;" [style.background]="''">
+            style="display: flex;
+             flex-direction: column; align-items: center;
+             box-shadow: 0px 14px 20px 10px #070d743d, 0 1px 18px 0 rgb(13 5 105 / 26%), 0 3px 5px -1px #061f7538;" [style.background]="''">
 
             <div class="logo-badge" style="
-        border: solid 5px darkgrey;
-    width: 126px;
-    height: 123px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border-radius: 15px;
-    position: absolute;
-    top: -33px;
-    background-color: white;
-    padding-bottom: 5px;
-    box-shadow: 0 6px 10px 0 rgb(0 0 0 / 14%), 0 1px 18px 0 rgb(0 0 0 / 12%), 0 3px 5px -1px rgb(0 0 0 / 20%);">
+                    border: solid 5px darkblue;
+                    width: 126px;
+                    height: 123px;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    border-radius: 15px;
+                    position: absolute;
+                    top: -33px;
+                    background-color: white;
+                    padding-bottom: 5px;
+                    box-shadow: 0 6px 10px 0 rgb(0 0 0 / 14%), 0 1px 18px 0 rgb(0 0 0 / 12%), 0 3px 5px -1px rgb(0 0 0 / 20%);">
 
                 <img class="logo-image" style="width: 80px;" src="./assets/img/bmxLogo.png">
-                <div class="title secondary-text" style="color: #004684; margin-top: 10px;text-align: center;">
+                <div class="title secondary-text" 
+                style="color: #004684; margin-top: 10px;text-align: center;font-family: caviar;font-weight: 800;">
                     <!-- {{'projectName'}} -->
                     {{'BRAND MATRIX'}}
                 </div>
             </div>
 
             <div style="position: absolute;
-        top: 180px;
-        font-size: 54px;top: 150px;color: darkgrey; font-family: Miami;">
-                <!-- <p>WELCOME</p> -->
+        font-size: 42px;
+    top:185px;color: darkblue; font-family: babyScript;">
+                <p style="text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
+                box-shadow: inset inset 0px 0px 5px #c1c1c1;">Welcome!</p>
             </div>
 
+            <!-- LOGIN BADGE -->
             <div
-                style="    display: flex;
-        flex-direction: column;
-        align-items: center;
-        border: solid 5px darkgrey;
-        background-color: white;
-        border-radius: 10px;
-        position: absolute;
-        top: 248px;
-        padding: 32px; box-shadow: 0 6px 10px 0 rgb(0 0 0 / 14%), 0 1px 18px 0 rgb(0 0 0 / 12%), 0 3px 5px -1px rgb(0 0 0 / 20%);">
+                style="display: flex;
+                flex-direction: column;
+                align-items: center;
+                border: solid 5px darkblue;
+                background-color: white;
+                border-radius: 10px;
+                position: absolute;
+                top: 297px;
+                height: 285px;
+                padding: 32px;
+                box-shadow:  0px 0px 17px 2px #070d743d, 0 1px 18px 0 rgb(13 5 105 / 26%), 0 3px 5px -1px #061f7538;">
                
                 <form class="example-form" style="display: flex;flex-direction: column; align-items: center;width: 300px;">
                     <mat-form-field class="example-full-width" appearance="outline">
                         <mat-label>USER NAME</mat-label>
-                        <input matInput placeholder="Ex. Pizza" value="">
+                        <input matInput placeholder="BI username" value="">
                     </mat-form-field>
 
                     <mat-form-field class="example-full-width" appearance="outline">
                         <mat-label>PASSWORD</mat-label>
-                        <input matInput placeholder="Ex. It makes me feel...">
+                        <input matInput placeholder="BI Password">
                     </mat-form-field>
 
 
-                    <button [ngClass]="(isGoVoteOn)?'GO_LOGIN':'GO_Off__LOGIN'" mat-icon-button (click)="goVote()">
-                        BI
-                    </button>
-
-                    <button  mat-icon-button (click)="goVote()">
+                    <button [ngClass]="(isGoVoteOn)?'GO_LOGIN':'GO_Off__LOGIN'" mat-icon-button (click)="logintoTheMatrix(); ">
                         LOGIN
                     </button>
+
+                    <!-- <button  mat-icon-button (click)="goVote()">
+                        LOGIN
+                    </button> -->
 
 
 
@@ -143,84 +150,9 @@
         <!-- SUMMARY SLIDE -->
         <div *ngIf="(slideType === 'NameSummary')" class="summaryPresentar summary">
 
-            <div class="summaryLabel">Summary</div>
+            <div class="summaryLabel">Matrix list</div>
 
-            <div class="summaryButtons">
-                <div style="display: flex; flex-direction: row; justify-content: space-between;align-items: center">
-                    <button (click)="changeSummaryList('Positive')" mat-raised-button
-                        style="margin-right: 5px;background-color: white;">Positive</button>
-                    <button (click)="changeSummaryList('Neutral')" mat-raised-button
-                        style="margin-right: 5px; background-color: white;" color="primary">Neutral</button>
-                    <button (click)="changeSummaryList('Negative')" mat-raised-button
-                        style="margin-right: 5px; background-color: white;">Negative</button>
-
-                </div>
-                <div style="display: flex; flex-direction: row; justify-content: space-between;align-items: center">
-                    <button (click)="changeSummaryList('new names')" mat-raised-button
-                        style="margin-right: 5px;background-color: white;color:black">New
-                        Names</button>
-                    <button (click)="changeSummaryList('chart')" mat-mini-fab
-                        style="margin-right: 5px;background-color: white;color:black;outline: none;">
-                        <mat-icon>leaderboard</mat-icon>
-                    </button>
-                </div>
-            </div>
-
-            <div class="summaryMainContent">
-
-                <div *ngIf="summaryPositive" class="summaryPostives">
-                    <div class="summaryListDisplay" style="background-color: green; color: white;">
-                        <div (click)="clickedSummaryName(item.NameToDisplay, item.Name)"
-                            *ngFor="let item of totalNewNames2[0]">{{item.Name}}</div>
-                        <!-- <div *ngFor="let item of fonts">{{item}}</div> -->
-                    </div>
-                </div>
-                <div *ngIf="summaryNeutral" class="summaryPostives">
-                    <div class="summaryListDisplay" style="background-color: orange; color: white;">
-                        <div (click)="clickedSummaryName(item.NameToDisplay, item.Name)"
-                            *ngFor="let item of totalNewNames2[0]">{{item.Name}}</div>
-                        <!-- <div *ngFor="let item of fonts">{{item}}</div> -->
-                    </div>
-                </div>
-                <div *ngIf="summaryNegative" class="summaryNegative">
-                    <div class="summaryListDisplay" style="background-color: red; color: white;">
-                        <div (click)="clickedSummaryName(item.NameToDisplay, item.Name)"
-                            *ngFor="let item of totalNewNames2[0]">{{item.Name}}</div>
-                        <!-- <div *ngFor="let item of fonts">{{item}}</div> -->
-                    </div>
-                </div>
-                <div *ngIf="summaryNewNames" class="summaryNew_names">
-                    <div class="summaryListDisplay" style="background-color: purple; color: white;">
-                        <div (click)="clickedSummaryName(item.NameToDisplay, item.Name)"
-                            *ngFor="let item of totalNewNames2[0]">{{item.NameToDisplay}}</div>
-                        <!-- <div *ngFor="let item of fonts">{{item}}</div> -->
-                    </div>
-                </div>
-            </div>
-            <div *ngIf="summaryChart" class="summaryChart"
-                style="display: flex;flex-direction: column;     align-items: center;">
-
-                <!-- <div echarts [options]="chartOption" (chartClick)="onChartClick($event)"></div> -->
-                <ngx-charts-bar-vertical [hidden]="showRankedNames" [view]="chartDimension" [customColors]="colorScheme"
-                    [results]="pieChart" [gradient]="gradient" [xAxis]="showXAxis" [yAxis]="showYAxis"
-                    [legend]="showLegend" [showXAxisLabel]="showXAxisLabel" [showYAxisLabel]="showYAxisLabel"
-                    [xAxisLabel]="xAxisLabel" [yAxisLabel]="yAxisLabel" (select)="onChartClick($event)">
-                </ngx-charts-bar-vertical>
-
-            </div>
-
-            <div style="position: fixed;bottom: 0px;">
-
-                <div class="summaryTextarea">
-                    <mat-form-field style="margin-left:20px; width: 800px;margin-right: 10px;" appearance="outline">
-                        <mat-label>Additional comments</mat-label>
-                        <input type="text" matInput placeholder="Additional comments">
-                    </mat-form-field>
-
-                    <button class="summaryTextAreaButton" mat-raised-button>Save</button>
-                </div>
-
-            </div>
+           
 
         </div>
 
@@ -448,25 +380,22 @@
         </div>
 
 
-        
-        <div *ngIf="mainMenu && (slideType !== 'Image')" class="bottom_menu">
-            <button mat-icon-button matTooltip="home" matTooltipPosition="above">
-                <mat-icon (click)="selectPage('home')" class="full-icon">home</mat-icon>
+        <!-- MAIN MENU -->
+        <div [ngClass]="(isGoVoteOn)?'bottom_menu':'bottom_menu_off'">
+            <button mat-icon-button matTooltip="project list" matTooltipPosition="above">
+                <mat-icon  class="full-icon">list</mat-icon>
             </button>
-            <button (click)="openFullscreen()" matTooltip="full-screen" matTooltipPosition="above" mat-icon-button color="warn"
+            <button  matTooltip="matrix invites" matTooltipPosition="above" mat-icon-button color="warn"
                 aria-label="aria">
-                <mat-icon class="full-icon">aspect_ratio</mat-icon>
+                <mat-icon class="full-icon">window</mat-icon>
             </button>
-            <button (click)="isTableOfContent = !isTableOfContent" matTooltip="search" matTooltipPosition="above" mat-icon-button
+            <button matTooltip="create/edit" matTooltipPosition="above" mat-icon-button
                 color="warn" aria-label="aria">
-                <mat-icon class="full-icon">search</mat-icon>
-            </button>
-            <button *ngIf="!true" mat-icon-button matTooltip="slide comments" matTooltipPosition="above">
-                <mat-icon class="full-icon">comment</mat-icon>
-            </button>
-            <button *ngIf="!false" (click)="displayQRCode()" matTooltip="qr code" matTooltipPosition="above" mat-icon-button
+                <mat-icon class="full-icon">edit</mat-icon>
+            </button>            
+            <button *ngIf="!false" matTooltip="reports" matTooltipPosition="above" mat-icon-button
                 aria-label="aria">
-                <mat-icon class="full-icon">qr_code</mat-icon>
+                <mat-icon class="full-icon">waterfall_chart</mat-icon>
             </button>
             <button (click)="displayNameVoteInfo()" matTooltip="mobile app" matTooltipPosition="above" mat-icon-button
                 color="red">
@@ -498,14 +427,14 @@
             <button *ngIf="true" mat-icon-button matTooltip="help" matTooltipPosition="above">
                 <mat-icon class="full-icon">help</mat-icon>
             </button>
-            <button (click)="selectPage('summary')" mat-icon-button aria-label="page"
+            <!-- <button (click)="selectPage('summary')" mat-icon-button aria-label="page"
                 style="font-size: 23px;color: grey !important;cursor: pointer;">
                 {{pageNumber}}/{{passTotalPages}}
-            </button>
-            <button (click)="mainMenu = false" matTooltip="hide menu" matTooltipPosition="above" mat-icon-button color="warn"
+            </button> -->
+            <!-- <button (click)="mainMenu = false" matTooltip="hide menu" matTooltipPosition="above" mat-icon-button color="warn"
                 aria-label="aria">
                 <mat-icon class="full-icon">keyboard_arrow_down</mat-icon>
-            </button>
+            </button> -->
             <!-- <button class="goButton" *ngIf="true" mat-icon-button matTooltip="vote" matTooltipPosition="above"
                     mat-icon-button aria-label="aria">
                     GO
