--- a/src/app/bmx-creator/bmx-creator.component.scss
+++ b/src/app/bmx-creator/bmx-creator.component.scss
@@ -98,7 +98,7 @@
 }
 
 .imagePresentar {
-    border: solid 5px darkgrey;
+    border: solid 5px darkblue;
     width: 948px;
     height: 714px;
     margin: 0;
@@ -111,8 +111,9 @@
     @include BoxShadow(6);
 }
 .summaryPresentar {
-    border: solid 5px darkgrey;
+    border: solid 5px darkblue;
     width: 948px;
+    text-align: center;
     height: 714px;
     margin: 0;
     position: absolute;
@@ -137,29 +138,7 @@
     @include BoxShadow(6);
 }
 
-.corner_bar_menu {
-    position: absolute;
-    right: 30px;
-    bottom: 30px;
-    outline: none;
-    z-index: 9999;
-    background: white;
-    border-radius: 5px;
-    display: flex;
-    flex-direction: column;
-}
 
-.bottom_menu {
-    position: absolute;
-    right: 284px;
-    bottom: 10px;
-    outline: none;
-    z-index: 9999;
-    /* background: white; */
-    border-radius: 5px;
-    display: flex;
-    flex-direction: row;
-}
 
 .full-icon:hover {
     transform: scale(2);
@@ -504,14 +483,15 @@ $voteIconsColor: #008d05, #f2ce00, #f50c0c, #4c00ff, #4c00ff;
 }
 
 .GO_LOGIN {
-    width: 70px;
-    height: 70px;
+    width: 124px;
+    height: 45px;
     border: 5px solid darkblue;
     position: absolute;
-    right: 143px;
-    top: -44px;
+    right: 117px;
+    top: 201px;
     outline: none;
-    font-size: 36px;
+    border-radius: 6%;
+    font-size: 19px;
     line-height: 31px;
     background-color: white;
     color: darkblue;
@@ -528,14 +508,15 @@ $voteIconsColor: #008d05, #f2ce00, #f50c0c, #4c00ff, #4c00ff;
 }
 
 .GO_Off__LOGIN {
-    width: 70px;
-    height: 70px;
-    border: 5px solid white;
+    width: 124px;
+    height: 45px;
+    border: 7px solid white;
     position: absolute;
-    right: 143px;
-    top: -44px;
+    right: 117px;
+    top: 201px;
     outline: none;
-    font-size: 36px;
+    border-radius: 6%;
+    font-size: 19px;
     line-height: 30px;
     background-color: darkblue;
     color: white;
@@ -810,24 +791,20 @@ $voteIconsColor: #008d05, #f2ce00, #f50c0c, #4c00ff, #4c00ff;
     }
 }
 
-::ng-deep .mat-tooltip {
-    font-size: 24px;
-    position: absolute;
-    left: -2px;
-    top: -30px;
-    width: max-content;
-    text-align: center;
-}
+
 
 // SUMMARY SCSS
 
 .summary {
     .summaryLabel {
-        margin: 30px 20px;
+        margin: 45px 20px;
         font-size: 40px;
         max-height: 10%;
-        position: fixed;
+        color: darkblue;
+        font-family: 'coture';
         top: 10px;
+        text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
+                box-shadow: inset inset 0px 0px 5px #c1c1c1;
     }
 
     .summaryButtons {
@@ -1028,12 +1005,52 @@ $voteIconsColor: #008d05, #f2ce00, #f50c0c, #4c00ff, #4c00ff;
     }
 }
 
-.example-form {
-    min-width: 150px;
-    max-width: 500px;
-    width: 100%;
+
+.corner_bar_menu {
+    position: absolute;
+    right: 30px;
+    bottom: 30px;
+    outline: none;
+    z-index: 9999;
+    background: white;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
 }
 
-.example-full-width {
-    width: 100%;
+.bottom_menu {
+    position: absolute;
+    right: 329px;
+    bottom: 10px;
+    outline: none;
+    z-index: 9999;
+    /* background: white; */
+    border-radius: 5px;
+    display: flex;
+    flex-direction: row;
+    transform: scale(1.5);
+
+    .mat-tooltip {
+        font-size: 24px;
+        position: absolute;
+        left: -2px;
+        top: -30px;
+        width: max-content;
+        text-align: center;
+    }
+    
+}
+
+
+.bottom_menu_off{
+    display: none;
+}
+
+::ng-deep .mat-tooltip {
+    font-size: 34px;
+    position: absolute;
+    left: -2px;
+    top: -20px;
+    width: max-content;
+    text-align: center;
 }
